--- a/server/package.json
+++ b/server/package.json
@@ -32,33 +32,34 @@
   "dependencies": {
     "@openai/agents": "^0.1.0",
     "@prisma/client": "^6.1.0",
-    "express": "^4.21.2",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
-    "dotenv": "^16.4.7",
-    "zod": "^3.24.1",
+    "openai": "^5.23.0",
     "winston": "^3.17.0",
-    "express-rate-limit": "^7.4.1",
-    "compression": "^1.7.5",
-    "express-validator": "^7.2.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "@types/express": "^5.0.0",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
     "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "eslint": "^9.17.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "prisma": "^6.1.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "prisma": "^6.1.0",
-    "nodemon": "^3.1.9"
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=18.0.0"
