--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "katex": "^0.16.22",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
@@ -54,7 +55,9 @@
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.9.3",
     "recharts": "^2.15.4",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
